--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <script src="js/chosen/chosen.jquery.min.js"></script>
         <script src="js/jquery-ui-1.12.1.custom/jquery-ui.min.js"></script>
         <script src="js/jquery-ui-1.12.1.custom/datepicker-ru.js"></script>
+        <script src="js/jquery.scrollTo.min.js"></script>
         <script src="js/tools.js"></script>
 
         <meta name="viewport" content="width=device-width" />
@@ -40,8 +41,8 @@
                             <ul>
                                 <li><a href="#menu" class="mobile-menu-scroll">Меню</a></li>
                                 <li><a href="#reviews" class="mobile-menu-scroll">Отзывы</a></li>
-                                <li><a href="#">личный кабинет</a></li>
-                                <li><a href="#">корзина<span class="mobile-menu-cart-count">5</span></a></li>
+                                <li><a href="windows/login.html" class="window-link">личный кабинет</a></li>
+                                <li><a href="windows/order.html" class="window-link">корзина<span class="mobile-menu-cart-count">5</span></a></li>
                                 <li><a href="tel:+79164064444"><strong>+7 916 406-44-44</strong></a></li>
                             </ul>
                         </div>
@@ -58,8 +59,8 @@
                     </div>
 
                     <div class="header-ctrl">
-                        <a href="#" class="header-user"></a>
-                        <a href="#" class="header-cart"><span class="header-cart-count">5</span></a>
+                        <a href="windows/login.html" class="header-user window-link"></a>
+                        <a href="windows/order.html" class="header-cart window-link"><span class="header-cart-count">5</span></a>
                     </div>
                 </div>
             </header>
