--- a/windows/order.html
+++ b/windows/order.html
@@ -14,11 +14,11 @@
                                         },
                                         {
                                             value   : '3',
-                                            title   : '7 дней: 8 000 руб.',
+                                            title   : '7 дней: 8 000 руб. (экономия 400 руб.)',
                                         },
                                         {
                                             value   : '4',
-                                            title   : '30 дней: 32 400 руб.',
+                                            title   : '30 дней: 32 400 руб. (экономия 3 600 руб.)',
                                         },
                                     ]
                         },
@@ -134,5 +134,6 @@
         </div>
         <div class="form-submit"><input type="submit" value="оформить заказ" /></div>
         <div class="form-notice">Нажимая кнопку «Оформить заказ», вы даете согласие на обработку ваших персональных данных компанией MYFooFit. C политикой конфиденциальности можно ознакомиться <a href="#">здесь</a>.</div>
+        <div class="form-error">Произошла ошибка</div>
     </form>
 </div>
