--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
                                 <li><a href="#menu" class="mobile-menu-scroll">Меню</a></li>
                                 <li><a href="#reviews" class="mobile-menu-scroll">Отзывы</a></li>
                                 <li><a href="windows/login.html" class="window-link">личный кабинет</a></li>
-                                <li><a href="windows/order.html" class="window-link">корзина<span class="mobile-menu-cart-count">5</span></a></li>
-                                <li><a href="tel:+79164064444"><strong>+7 916 406-44-44</strong></a></li>
+                                <li><a href="windows/order.html" class="window-link">корзина</a></li>
                             </ul>
                         </div>
+                        <div class="mobile-menu-phone"><a href="tel:+79164064444">+7 916 406-44-44</a></div>
                     </div>
                     <nav>
                         <ul>
