--- a/windows/login.html
+++ b/windows/login.html
@@ -1,5 +1,5 @@
 <div class="window-order">
-    <div class="window-order-title"><a href="windows/registration.html" class="window-link">Регистрация</a> <span>Вход</span></div>
+    <div class="window-order-title"><span>Вход</span> <a href="windows/registration.html" class="window-link">Регистрация</a></div>
     <form action="windows/success.html" method="post" class="window-form">
         <div class="cols">
             <div class="col-half">
