--- a/windows/registration.html
+++ b/windows/registration.html
@@ -1,5 +1,5 @@
 <div class="window-order">
-    <div class="window-order-title"><span>Регистрация</span> <a href="windows/login.html" class="window-link">Вход</a></div>
+    <div class="window-order-title"><a href="windows/login.html" class="window-link">Вход</a> <span>Регистрация</span></div>
     <form action="windows/success.html" method="post" class="window-form">
         <div class="cols">
             <div class="col-half">
