--- a/cabinet.html
+++ b/cabinet.html
@@ -56,7 +56,7 @@
                         </div>
                         <div class="cabinet-profile-item">
                             <div class="cabinet-profile-item-title">Ваш e-mail:</div>
-                            <div class="cabinet-profile-item-value">konstantinopolskyi@myfoodfit.ru <a href="#" class="cabinet-profile-item-edit"></a></div>
+                            <div class="cabinet-profile-item-value">konstantinopolskyi@myfoodfit.ru</div>
 
                         </div>
                         <div class="cabinet-profile-item">
@@ -106,34 +106,33 @@
                     <div class="cabinet-block-cols">
                         <div class="cabinet-block-col cabinet-block-col-4">№</div>
                         <div class="cabinet-block-col cabinet-block-col-5">Программа</div>
-                        <div class="cabinet-block-col cabinet-block-col-6">Кол-во дней</div>
-                        <div class="cabinet-block-col cabinet-block-col-7">Дата</div>
-                        <div class="cabinet-block-col cabinet-block-col-8">Статус</div>
+                        <div class="cabinet-block-col cabinet-block-col-6">Сумма (руб.)</div>
+                        <div class="cabinet-block-col cabinet-block-col-7">Статус</div>
                     </div>
                     <div class="cabinet-block-rows">
                         <div class="cabinet-block-row">
                             <div class="cabinet-block-row-item cabinet-block-row-item-4"><span class="cabinet-block-row-item-title-mobile">№:</span> 3288</div>
                             <div class="cabinet-block-row-item cabinet-block-row-item-5"><span class="cabinet-block-row-item-title-mobile">Программа:</span> Офис</div>
-                            <div class="cabinet-block-row-item cabinet-block-row-item-6"><span class="cabinet-block-row-item-title-mobile">Кол-во дней:</span> 15</div>
-                            <div class="cabinet-block-row-item cabinet-block-row-item-7"><span class="cabinet-block-row-item-title-mobile">Дата:</span> 04.09.2017</div>
-                            <div class="cabinet-block-row-item cabinet-block-row-item-8 status-1"><span class="cabinet-block-row-item-title-mobile">Статус:</span> Получено</div>
-                            <div class="cabinet-block-row-item cabinet-block-row-item-9"><a href="#">повторить</a></div>
+                            <div class="cabinet-block-row-item cabinet-block-row-item-6"><span class="cabinet-block-row-item-title-mobile">Сумма (руб.):</span> 15 000</div>
+                            <div class="cabinet-block-row-item cabinet-block-row-item-7 status-1"><span class="cabinet-block-row-item-title-mobile">Статус:</span> Получено</div>
+                            <div class="cabinet-block-row-item cabinet-block-row-item-8"><a href="#">повторить</a></div>
+                            <div class="cabinet-block-row-item cabinet-block-row-item-9"><a href="#">подробнее <span class="arrow">&darr;</span></a></div>
                         </div>
                         <div class="cabinet-block-row">
                             <div class="cabinet-block-row-item cabinet-block-row-item-4"><span class="cabinet-block-row-item-title-mobile">№:</span> 6677</div>
                             <div class="cabinet-block-row-item cabinet-block-row-item-5"><span class="cabinet-block-row-item-title-mobile">Программа:</span> Снижение веса</div>
-                            <div class="cabinet-block-row-item cabinet-block-row-item-6"><span class="cabinet-block-row-item-title-mobile">Кол-во дней:</span> 7</div>
-                            <div class="cabinet-block-row-item cabinet-block-row-item-7"><span class="cabinet-block-row-item-title-mobile">Дата:</span> 11.08.2017</div>
-                            <div class="cabinet-block-row-item cabinet-block-row-item-8 status-2"><span class="cabinet-block-row-item-title-mobile">Статус:</span> В пути</div>
-                            <div class="cabinet-block-row-item cabinet-block-row-item-9"><a href="#">повторить</a></div>
+                            <div class="cabinet-block-row-item cabinet-block-row-item-6"><span class="cabinet-block-row-item-title-mobile">Сумма (руб.):</span> 70 000</div>
+                            <div class="cabinet-block-row-item cabinet-block-row-item-7 status-2"><span class="cabinet-block-row-item-title-mobile">Статус:</span> В пути</div>
+                            <div class="cabinet-block-row-item cabinet-block-row-item-8"><a href="#">повторить</a></div>
+                            <div class="cabinet-block-row-item cabinet-block-row-item-9"><a href="#">подробнее <span class="arrow">&darr;</span></a></div>
                         </div>
                         <div class="cabinet-block-row">
                             <div class="cabinet-block-row-item cabinet-block-row-item-4"><span class="cabinet-block-row-item-title-mobile">№:</span> 3321</div>
                             <div class="cabinet-block-row-item cabinet-block-row-item-5"><span class="cabinet-block-row-item-title-mobile">Программа:</span> Баланс</div>
-                            <div class="cabinet-block-row-item cabinet-block-row-item-6"><span class="cabinet-block-row-item-title-mobile">Кол-во дней:</span> 21</div>
-                            <div class="cabinet-block-row-item cabinet-block-row-item-7"><span class="cabinet-block-row-item-title-mobile">Дата:</span> 21.07.2017</div>
-                            <div class="cabinet-block-row-item cabinet-block-row-item-8 status-3"><span class="cabinet-block-row-item-title-mobile">Статус:</span> Отказ</div>
-                            <div class="cabinet-block-row-item cabinet-block-row-item-9"><a href="#">повторить</a></div>
+                            <div class="cabinet-block-row-item cabinet-block-row-item-6"><span class="cabinet-block-row-item-title-mobile">Сумма (руб.):</span> 21 000</div>
+                            <div class="cabinet-block-row-item cabinet-block-row-item-7 status-3"><span class="cabinet-block-row-item-title-mobile">Статус:</span> Отказ</div>
+                            <div class="cabinet-block-row-item cabinet-block-row-item-8"><a href="#">повторить</a></div>
+                            <div class="cabinet-block-row-item cabinet-block-row-item-9"><a href="#">подробнее <span class="arrow">&darr;</span></a></div>
                         </div>
                     </div>
                     <div class="cabinet-block-ctrl">
