--- a/success.html
+++ b/success.html
@@ -41,8 +41,8 @@
                             <ul>
                                 <li><a href="index.html#menu" class="mobile-menu-scroll">Меню</a></li>
                                 <li><a href="index.html#reviews" class="mobile-menu-scroll">Отзывы</a></li>
-                                <li><a href="windows/login.html" class="window-link">личный кабинет</a></li>
-                                <li><a href="windows/order.html" class="window-link">корзина</a></li>
+                                <li><a href="windows/login.html" class="window-link">Личный кабинет</a></li>
+                                <li><a href="windows/order.html" class="window-link">Заказать</a></li>
                             </ul>
                         </div>
                         <div class="mobile-menu-phone"><a href="tel:+79164064444">+7 916 406-44-44</a></div>
@@ -60,7 +60,7 @@
 
                     <div class="header-ctrl">
                         <a href="windows/login.html" class="header-user window-link"></a>
-                        <a href="windows/order.html" class="header-cart window-link"><span class="header-cart-count">5</span></a>
+                        <a href="windows/order.html" class="header-cart window-link"></a>
                     </div>
                 </div>
             </header>
