--- a/cabinet.html
+++ b/cabinet.html
@@ -70,7 +70,7 @@
                                 <span class="cabinet-profile-item-value-text">konstantinopolskyi@myfoodfit.ru</span>
                             </div>
                         </div>
-                        <div class="cabinet-profile-item">
+                        <div class="cabinet-profile-item cabinet-profile-item-address">
                             <div class="cabinet-profile-item-title">Адрес доставки:</div>
                             <div class="cabinet-profile-item-value">
                                 <span class="cabinet-profile-item-value-text">г. москва, ул. генерала белобородова, д.178 кв.145</span> <a href="#" class="cabinet-profile-item-edit"></a>
