--- a/windows/login.html
+++ b/windows/login.html
@@ -12,6 +12,9 @@
                 <div class="window-forgot-link"><a href="#">забыли пароль?</a></div>
             </div>
         </div>
+
+        <div class="form-captcha"><div class="g-recaptcha"></div></div>
+
         <div class="form-submit form-submit-2"><input type="submit" value="войти" /></div>
         <div class="window-social">
             <div class="window-social-title"><div class="window-social-title-text">или</div></div>
