--- a/windows/registration.html
+++ b/windows/registration.html
@@ -21,6 +21,9 @@
                 <div class="form-input"><input type="password" name="repassword" value="" class="required" equalTo="#password" /></div>
             </div>
         </div>
+
+        <div class="form-captcha"><div class="g-recaptcha"></div></div>
+
         <div class="form-submit"><input type="submit" value="зарегистрироваться" /></div>
         <div class="window-social">
             <div class="window-social-title"><div class="window-social-title-text">или</div></div>
