--- a/success.html
+++ b/success.html
@@ -20,6 +20,7 @@
         <script src="js/jquery-ui-1.12.1.custom/jquery-ui.min.js"></script>
         <script src="js/jquery-ui-1.12.1.custom/datepicker-ru.js"></script>
         <script src="js/jquery.scrollTo.min.js"></script>
+        <script src="https://www.google.com/recaptcha/api.js" async defer></script>
         <script src="js/tools.js"></script>
 
         <meta name="viewport" content="width=device-width" />
